--- a/references.bib
+++ b/references.bib
@@ -186,3 +186,17 @@ doi = {10.1109/ICRA.2019.8793260}
   journal={arXiv preprint arXiv:1404.3785},
   year={2014}
 }
+
+@article{MORRISON201679,
+title = {Branch-and-bound algorithms: A survey of recent advances in searching, branching, and pruning},
+journal = {Discrete Optimization},
+volume = {19},
+pages = {79-102},
+year = {2016},
+issn = {1572-5286},
+doi = {https://doi.org/10.1016/j.disopt.2016.01.005},
+url = {https://www.sciencedirect.com/science/article/pii/S1572528616000062},
+author = {David R. Morrison and Sheldon H. Jacobson and Jason J. Sauppe and Edward C. Sewell},
+keywords = {Branch-and-bound, Discrete optimization, Integer programming, Search strategies, Cyclic best first search, Survey},
+abstract = {The branch-and-bound (B&B) algorithmic framework has been used successfully to find exact solutions for a wide array of optimization problems. B&B uses a tree search strategy to implicitly enumerate all possible solutions to a given problem, applying pruning rules to eliminate regions of the search space that cannot lead to a better solution. There are three algorithmic components in B&B that can be specified by the user to fine-tune the behavior of the algorithm. These components are the search strategy, the branching strategy, and the pruning rules. This survey presents a description of recent research advances in the design of B&B algorithms, particularly with regards to these three components. Moreover, three future research directions are provided in order to motivate further exploration in these areas.}
+}
